[#89] add filter_attributes field to domain
